# murban-intelligence-copilot

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Technical_Overview.md  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  requirements.md
config/: llm_config.yaml
docs/: Technical_Overview.md
resources/: Claude_instructions.txt  StoryGenerator.py  idea.txt
src/murban_copilot/: __init__.py
src/murban_copilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/murban_copilot/application/: __init__.py  analyze_spread.py  fetch_market_data.py  generate_signal.py
src/murban_copilot/domain/: __init__.py  config.py  entities.py  exceptions.py  spread_calculator.py  validators.py
src/murban_copilot/infrastructure/: __init__.py
src/murban_copilot/infrastructure/config/: __init__.py  config_loader.py
src/murban_copilot/interface/: __init__.py  streamlit_app.py
tests/: __init__.py  conftest.py
tests/contract/: test_llm_contract.py  test_market_data_contract.py
tests/integration/: test_config_integration.py  test_llm_integration.py  test_market_data_integration.py
tests/unit/application/: test_analyze_spread.py  test_fetch_market_data.py  test_generate_signal.py
tests/unit/domain/: test_config.py  test_entities.py  test_spread_calculator.py  test_validators.py
tests/unit/infrastructure/: test_config_loader.py  test_health_checker.py  test_llm_client.py  test_llm_factory.py  test_logger.py  test_prompt_templates.py  test_transformers_client.py  test_yahoo_client.py
(+15 files in other folders)
